# twitch-musicplayer

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.example.toml  config.toml  go.mod  go.sum  lofi-radio.bloom  main.go
docs/: api.md  configuration.md  contributor-guide.md  deployment.md  developer-guide.md  onnx_openvino_music_generation_research.md  overview.md  performance.md  requirement-review.md  user-guide.md  websocket-protocol.md
frontend/: .env.example  Dockerfile  admin.html  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: AdminApp.tsx  App.tsx  OverlayApp.tsx  admin.tsx  index.tsx
presets/lofi/: afterglow_pad.yaml  alone_at_piano.yaml  ambient_lofi.yaml  balcony_rain.yaml  blue_hour_piano.yaml  cassette_clouds.yaml  chillhop_cafe.yaml  clouded_rhodes.yaml  deep_space_ambient.yaml  distant_upright.yaml  dream_tape.yaml  dusk_library.yaml  dusty_808.yaml  felt_piano_morning.yaml  forest_pad.yaml  frosted_glass.yaml  glass_lagoon.yaml  golden_hour.yaml  lantern_keys.yaml  late_night_study.yaml  midnight_drizzle.yaml  misty_tape_loop.yaml  (+15 more)
scripts/: chiptune_cover_folder.sh  generate_all_presets.sh  generate_random_tracks.sh  remake_lofi_folder.sh  run_ambient_generation_24h.sh  run_piano_ambient_generation_24h.sh  run_slowed_reverb_ambient_generation_24h.sh
tests/: test_chiptune.py  test_export.py  test_generation.py  test_ncs_music.py  test_neural_ambient.py  test_presets.py  test_remake.py
(+78 files in other folders)
