[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lofi-maker"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pretty_midi>=0.2.10",
    "mido>=1.3.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.1",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydub>=0.25.1",
    "pyloudnorm>=0.1.1",
    "pedalboard>=0.7.0",
    "pyfluidsynth>=1.3.0",
]

[project.optional-dependencies]
ai = [
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "music21>=9.1.0",
    "sentencepiece>=0.1.99",
    "accelerate>=0.24.0",
]
stems = [
    "demucs>=4.0.0",
    "torchaudio>=2.1.0",
    "torch>=2.1.0",
]
melody = [
    "basic-pitch>=0.3.0",
]
all = ["lofi-maker[ai,stems,melody]"]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[project.scripts]
songgen = "lofi_maker.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/lofi_maker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
